--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,12 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+*.suo
+*.user
+*.sln.userosscache
+[Dd]ebug/
+[Rr]elease/
+*.vs/
+bin/
+obj/
