--- a/lambda/lambdaValidarUsuario.Tests/lambdaValidarUsuario.Tests.csproj
+++ b/lambda/lambdaValidarUsuario.Tests/lambdaValidarUsuario.Tests.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsTestProject>true</IsTestProject>
@@ -13,6 +13,6 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\lambda.ValidarUsuario\lambdaValidarUsuario.csproj" />
+    <ProjectReference Include="..\lambdaValidarUsuario\lambdaValidarUsuario.csproj" />
   </ItemGroup>
 </Project>
