--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -43,7 +43,7 @@ jobs:
           dotnet-version: '6.0.x'
       
       - name: Build solution
-        run: dotnet build -c Debug lambda/lambdaValidarUsuario.sln
+        run: dotnet build -c Debug lambdaValidarUsuario.sln
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
