--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -45,14 +45,14 @@ jobs:
       - name: AWS CLI
         run: dotnet tool install -g Amazon.Lambda.Tools
 
-      - name: Restore dependencies
-        run: dotnet restore lambdaValidarUsuario.sln
+      # - name: Restore dependencies
+      #   run: dotnet restore lambdaValidarUsuario.sln
 
       - name: Build
         run: dotnet build --no-restore lambdaValidarUsuario.sln
 
-      - name: Deploy to Lambda
-        run: dotnet lambda deploy-serverless
+      # - name: Deploy to Lambda
+      #   run: dotnet lambda deploy-serverless
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
