--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,11 +25,11 @@ jobs:
 
       - name: Initialize Terraform
         run: terraform init
-       # working-directory: infra
+        working-directory: infra
 
       - name: Apply Terraform
         run: terraform apply -auto-approve
-       # working-directory: infra
+        working-directory: infra
 
   build-deploy:
     runs-on: ubuntu-latest
