--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -51,6 +51,9 @@ jobs:
       - name: Build
         run: dotnet build --no-restore lambdaValidarUsuario.sln
 
+      - name: Build Projeto
+        run: dotnet build --no-restore lambdaValidarUsuario.csproj
+
       # - name: Deploy to Lambda
       #   run: dotnet lambda deploy-serverless
 
