--- a/lambdaValidarUsuario/lambdaValidarUsuario.csproj
+++ b/lambdaValidarUsuario/lambdaValidarUsuario.csproj
@@ -4,6 +4,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
     <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+    <SelfContained>False</SelfContained>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="aws-lambda-tools-defaults.json" />
