--- a/lambdaValidarUsuario/lambdaValidarUsuario.csproj
+++ b/lambdaValidarUsuario/lambdaValidarUsuario.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Amazon.Lambda.Core" Version="2.5.1" />
     <PackageReference Include="Amazon.Lambda.Logging.AspNetCore" Version="3.1.1" />
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.4.4" />
+    <PackageReference Include="AWSSDK.CognitoIdentityProvider" Version="3.7.407.14" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.3" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.3" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
